# piper-phonemize

./: CMakeLists.txt  patch_espeak.py  simple_test.py  test_build_config.py
.github/workflows/: build_native_plugin.yml  main.yml  test.yml
build_ios/: CMakeCache.txt
cmake/: ios.toolchain.cmake
src/: phonemize.cpp  tashkeel.cpp  tashkeel.hpp  unity_interface.cpp
